@@ -1,3 +1,8 @@
+Wed Jan  7 12:35:41 2004  NAKAMURA, Hiroshi  <nakahiro@sarion.co.jp>
+
+	* lib/debug.rb: revert command parse regexps.  [ruby-list:39014] by
+	  Shirai,Kaoru.
+
 Wed Jan  7 08:21:04 2004  Dave Thomas  <dave@pragprog.com>
 
 	* lib/rdoc/parsers/parserfactory.rb: Check for shebang
